Closed Bug 738102 Opened 12 years ago Closed 12 years ago

devicemotion causes shutdown crash

Categories

(Core :: DOM: Geolocation, defect)

x86_64
macOS
defect
Not set
blocker

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: jruderman, Assigned: dougt)

References

Details

(Keywords: crash, testcase)

Attachments

(3 files)

Currently only happens on mozilla-inbound.

I'm guessing this is a regression from http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?changeset=96bcc7997727
Attached file stack trace
Those pushes were all backed out, but this should be addressed before they reland.
Blocks: 735330
They don't look backed out to me...
Oh, right, inbound/central confusion.
Assignee: nobody → doug.turner
Attached patch patch v.1Splinter Review
Attachment #608232 - Flags: review?(josh)
Attachment #608232 - Flags: review?(josh) → review+
https://hg.mozilla.org/mozilla-central/rev/41f85ded0197
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: