Bug 738102 - devicemotion causes shutdown crash. r=jdm